force-app/main/default/objects/Course__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Course_Level__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Course</valueSetName>
    </valueSet>
</CustomField>