force-app/main/default/objects/Course__c/fields/Sanctioned_Intake__c.field-meta.xml
<CustomField>
    <fullName>Sanctioned_Intake__c</fullName>
    <label>Sanctioned Intake</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>