force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Level__c</columns>
    <columns>Course__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Course_Duration__c</columns>
    <columns>Sanctioned_Intake__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>